# wortmeister

./: Cargo.toml  README.md  build.rs  words_data.json
src/: main.rs
static/: app.js  index.html  styles.css
words/9-10. sınıf/: 10. ünite (10).json  11. ünite (11).json  4. ünite (4).json  6. ünite (6).json  8. ünite (8).json  9. ünite (9).json
words/9_10_sinif/: unite1.json  unite12.json  unite2.json  unite3.json  unite4.json  unite5.json  unite6.json  unite7.json
words/hazirlik/: unit10.json  unit2.json  unit6.json  unit8.json  unit9.json
words/hazirlik2_donem/: unit-1.json  unit-10.json  unit-11.json  unit-12.json  unit-2.json  unit-3.json  unit-4.json  unit-5.json  unit-6.json  unit-7.json  unit-8.json  unit-9.json
words/hazırlık/: unit1.json  unit11.json  unit12.json  unit3.json  unit4.json  unit5.json  unit7.json
