[package]
name = "wortmeister"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.5", features = ["fs", "cors"] }
tower = "0.4"
uuid = { version = "1", features = ["v4"] }
parking_lot = "0.12"
strsim = "0.11"
unicode-normalization = "0.1"
